added gov.uk front page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<script>
+<!-- <script>
   document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');
 
-</script>
+</script> -->
 
 <a href="#main-content" class="govuk-skip-link">Skip to main content</a>
 
@@ -49,8 +49,7 @@
   </div>
 </footer>
 
-<script src="/govuk-frontend/all.js"></script>
+<!-- <script src="/govuk-frontend/all.js"></script>
 <script>
   window.GOVUKFrontend.initAll()
-
-</script>
+</script> -->
