added school and LA search skeletons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,17 +31,17 @@
           <ul id="navigation" class="govuk-header__navigation " aria-label="Top Level Navigation">
             <li class="govuk-header__navigation-item govuk-header__navigation-item--active">
               <a class="govuk-header__link" href="#1">
-                Navigation item 1
+                School search
               </a>
             </li>
             <li class="govuk-header__navigation-item">
               <a class="govuk-header__link" href="#2">
-                Navigation item 2
+                LA search
               </a>
             </li>
             <li class="govuk-header__navigation-item">
               <a class="govuk-header__link" href="#3">
-                Navigation item 3
+                MAT search
               </a>
             </li>
           </ul>
@@ -65,8 +65,11 @@
     <a href="#" class="govuk-back-link">Back</a>
 
     <main class="govuk-main-wrapper app-main-class" id="main-content" role="main">
-      <h1 class="govuk-heading-xl">Customised page template</h1>
+      <!-- <h1 class="govuk-heading-xl">Customised page template</h1> -->
+      <app-search-school></app-search-school>
     </main>
+
+
   </div>
 
   <footer class="govuk-footer " role="contentinfo">
