updated main page layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -63,13 +63,35 @@
     </div>
 
     <a href="#" class="govuk-back-link">Back</a>
+    
+    <main class="govuk-main-wrapper">
 
-    <main class="govuk-main-wrapper app-main-class" id="main-content" role="main">
-      <!-- <h1 class="govuk-heading-xl">Customised page template</h1> -->
-      <app-search-school></app-search-school>
+      <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
+          <h1 class="govuk-heading-xl">Two-thirds column</h1>
+        </div>
+      </div>
+  
+      <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
+          <h2 class="govuk-heading-l">Two-thirds column</h2>
+          <p class="govuk-body-l">This is a lead paragraph inside a two-thirds wide column</p>
+          <p class="govuk-body">This is a paragraph inside a two-thirds wide column</p>
+        </div>
+  
+        <div class="govuk-grid-column-one-third">
+          <h3 class="govuk-heading-m">One-third column</h3>
+          <p class="govuk-body">This is a paragraph inside a one-third wide column</p>
+  
+        </div>
+      </div>
+  
     </main>
-
-
+    <!-- <main class="govuk-main-wrapper app-main-class" id="main-content" role="main"> -->
+      <!-- <h1 class="govuk-heading-xl">Customised page template</h1> -->
+      <!-- <app-search-school></app-search-school>
+      <app-search-la></app-search-la> -->   
+    <!-- </main> -->
   </div>
 
   <footer class="govuk-footer " role="contentinfo">
