--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,19 +30,28 @@
         <nav>
           <ul id="navigation" class="govuk-header__navigation " aria-label="Top Level Navigation">
             <li class="govuk-header__navigation-item govuk-header__navigation-item--active">
-              <a class="govuk-header__link" href="#1">
+              <button
+                type="button"
+                (click)="selectSearchType('Search for pupil information (School)')">
                 School search
-              </a>
+              </button>
+              <!-- <a class="govuk-header__link" href="#1" ng-click="searchType = Search for pupil information">
+                School search
+              </a> -->
             </li>
             <li class="govuk-header__navigation-item">
-              <a class="govuk-header__link" href="#2">
+                <button
+                type="button"
+                (click)="selectSearchType('Search for pupil information (LA)')">
                 LA search
-              </a>
+              </button>
             </li>
             <li class="govuk-header__navigation-item">
-              <a class="govuk-header__link" href="#3">
+                <button
+                type="button"
+                (click)="selectSearchType('Search for pupil information (MAT)')">
                 MAT search
-              </a>
+              </button>
             </li>
           </ul>
         </nav>
@@ -68,7 +77,7 @@
 
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-          <h1 class="govuk-heading-xl">Two-thirds column</h1>
+          <h1 class="govuk-heading-xl">{{ searchType }}</h1>
         </div>
       </div>
   
