updated link binding

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,28 +30,25 @@
         <nav>
           <ul id="navigation" class="govuk-header__navigation " aria-label="Top Level Navigation">
             <li class="govuk-header__navigation-item govuk-header__navigation-item--active">
-              <button
-                type="button"
-                (click)="selectSearchType('Search for pupil information (School)')">
+              <a class="govuk-header__link"
+                 href="#"
+                 (click)="selectSearchType('Search for pupil information (School)')">
                 School search
-              </button>
-              <!-- <a class="govuk-header__link" href="#1" ng-click="searchType = Search for pupil information">
-                School search
-              </a> -->
+              </a>
             </li>
             <li class="govuk-header__navigation-item">
-                <button
-                type="button"
-                (click)="selectSearchType('Search for pupil information (LA)')">
+              <a class="govuk-header__link"
+                 href="#"
+                 (click)="selectSearchType('Search for pupil information (LA)')">
                 LA search
-              </button>
+              </a>
             </li>
             <li class="govuk-header__navigation-item">
-                <button
-                type="button"
-                (click)="selectSearchType('Search for pupil information (MAT)')">
+              <a class="govuk-header__link"
+                 href="#"
+                 (click)="selectSearchType('Search for pupil information (MAT)')">
                 MAT search
-              </button>
+              </a>
             </li>
           </ul>
         </nav>
