--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -53,21 +53,21 @@
             <li class="govuk-header__navigation-item govuk-header__navigation-item--active">
               <a class="govuk-header__link"
                  href="#"
-                 (click)="selectSearchType('Search for pupil information (School)')">
+                 (click)="onSelectSearch('Search for pupil information (School)')">
                 School search
               </a>
             </li>
             <li class="govuk-header__navigation-item">
               <a class="govuk-header__link"
                  href="#"
-                 (click)="selectSearchType('Search for pupil information (LA)')">
+                 (click)="onSelectSearch('Search for pupil information (LA)')">
                 LA search
               </a>
             </li>
             <li class="govuk-header__navigation-item">
               <a class="govuk-header__link"
                  href="#"
-                 (click)="selectSearchType('Search for pupil information (MAT)')">
+                 (click)="onSelectSearch('Search for pupil information (MAT)')">
                 MAT search
               </a>
             </li>
