added eventEmitter for search type

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -45,21 +45,21 @@
                 <li class="govuk-header__navigation-item govuk-header__navigation-item--active">
                   <a class="govuk-header__link"
                      href="#"
-                     (click)="sendMessage('Search for pupil information (School)')">
+                     (click)="searchType('Search for pupil information (School)')">
                     School search
                   </a>
                 </li>
                 <li class="govuk-header__navigation-item">
                   <a class="govuk-header__link"
                      href="#"
-                     (click)="onSelectSearch('Search for pupil information (LA)')">
+                     (click)="searchType('Search for pupil information (LA)')">
                     LA search
                   </a>
                 </li>
                 <li class="govuk-header__navigation-item">
                   <a class="govuk-header__link"
                      href="#"
-                     (click)="onSelectSearch('Search for pupil information (MAT)')">
+                     (click)="searchType('Search for pupil information (MAT)')">
                     MAT search
                   </a>
                 </li>
