--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,11 +25,12 @@
     
     <main class="govuk-main-wrapper">
 
-      <div class="govuk-grid-row">
+      <app-search-type></app-search-type>
+      <!-- <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
           <h1 class="govuk-heading-xl">{{ searchType }}</h1>
         </div>
-      </div>
+      </div> -->
   
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
