added other components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,38 +20,23 @@
         </span>
       </p>
     </div>
-
-    <!-- <a href="#" class="govuk-back-link">Back</a> -->
     
     <main class="govuk-main-wrapper">
 
       <app-search-type></app-search-type>
-      <!-- <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
-          <h1 class="govuk-heading-xl">{{ searchType }}</h1>
-        </div>
-      </div> -->
-  
+     
       <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
-          <h2 class="govuk-heading-l">Two-thirds column</h2>
-          <p class="govuk-body-l">This is a lead paragraph inside a two-thirds wide column</p>
-          <p class="govuk-body">This is a paragraph inside a two-thirds wide column</p>
-        </div>
+
+        <app-search-parameters></app-search-parameters>
+      
+        <app-search-results></app-search-results>
   
-        <div class="govuk-grid-column-one-third">
-          <h3 class="govuk-heading-m">One-third column</h3>
-          <p class="govuk-body">This is a paragraph inside a one-third wide column</p>
-  
-        </div>
+        <app-links></app-links>
+
       </div>
-  
+
     </main>
-    <!-- <main class="govuk-main-wrapper app-main-class" id="main-content" role="main"> -->
-      <!-- <h1 class="govuk-heading-xl">Customised page template</h1> -->
-      <!-- <app-search-school></app-search-school>
-      <app-search-la></app-search-la> -->   
-    <!-- </main> -->
+    
   </div>
 
   <footer class="govuk-footer " role="contentinfo">
