--- a/src/app/search/search-results/search-results.component.html
+++ b/src/app/search/search-results/search-results.component.html
@@ -1,5 +1,5 @@
-
-<dl class="govuk-summary-list" *ngIf="searchResultsReturn">
+<div class="govuk-grid-column-one-half">
+   <dl class="govuk-summary-list">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
             Name
@@ -54,3 +54,4 @@
           </dd>
         </div>
       </dl>
+</div>
