--- a/src/app/search-parameters/search-parameters.component.html
+++ b/src/app/search-parameters/search-parameters.component.html
@@ -1,6 +1,22 @@
 
-        <div class="govuk-grid-column-one-quarter">
-          <h2 class="govuk-heading-l">Two-thirds column</h2>
-          <p class="govuk-body-l">This is a lead paragraph inside a two-thirds wide column</p>
-          <p class="govuk-body">This is a paragraph inside a two-thirds wide column</p>
-        </div>
+    <div class="govuk-grid-column-one-quarter">
+        <h3 class="govuk-heading-m">Search</h3>
+        <div class="govuk-form-group">
+                <label class="govuk-label" for="event-name">
+                  UPN
+                </label>
+                <input class="govuk-input" id="event-name" name="event-name" type="text">
+                <label class="govuk-label margin-top" for="event-name">
+                  Surname
+                </label>
+                <input class="govuk-input" id="event-name" name="event-name" type="text">
+                <label class="govuk-label margin-top" for="event-name">
+                  First name
+                </label>
+                <input class="govuk-input" id="event-name" name="event-name" type="text">
+                <label class="govuk-label margin-top" for="event-name">
+                  Date of birth
+                </label>
+                <input class="govuk-input" id="event-name" name="event-name" type="text">
+       </div>
+    </div>
