--- a/src/app/search/search-results/search-results.component.html
+++ b/src/app/search/search-results/search-results.component.html
@@ -1,4 +1,5 @@
 <div class="govuk-grid-column-one-half">
+  <h3 class="govuk-heading-m blue-border">Search Results</h3>
    <dl class="govuk-summary-list">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
@@ -7,11 +8,11 @@
           <dd class="govuk-summary-list__value">
             Sarah Philips
           </dd>
-          <dd class="govuk-summary-list__actions">
+          <!-- <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="#">
               Change<span class="govuk-visually-hidden"> name</span>
             </a>
-          </dd>
+          </dd> -->
         </div>
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
@@ -20,11 +21,11 @@
           <dd class="govuk-summary-list__value">
             5 January 1978
           </dd>
-          <dd class="govuk-summary-list__actions">
+          <!-- <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="#">
               Change<span class="govuk-visually-hidden"> date of birth</span>
             </a>
-          </dd>
+          </dd> -->
         </div>
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
@@ -33,11 +34,11 @@
           <dd class="govuk-summary-list__value">
             72 Guild Street<br>London<br>SE23 6FH
           </dd>
-          <dd class="govuk-summary-list__actions">
+          <!-- <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="#">
               Change<span class="govuk-visually-hidden"> contact information</span>
             </a>
-          </dd>
+          </dd> -->
         </div>
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
@@ -47,11 +48,11 @@
             <p class="govuk-body">07700 900457</p>
             <p class="govuk-body">sarah.phillips@example.com</p>
           </dd>
-          <dd class="govuk-summary-list__actions">
+          <!-- <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="#">
               Change<span class="govuk-visually-hidden"> contact details</span>
             </a>
-          </dd>
+          </dd> -->
         </div>
       </dl>
 </div>
