added results-list component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,23 +20,23 @@
         </span>
       </p>
     </div>
-    
+
     <main class="govuk-main-wrapper">
 
       <app-search-type></app-search-type>
-     
+
       <div class="govuk-grid-row">
 
         <app-search-parameters></app-search-parameters>
-      
-        <app-search-results></app-search-results>
-  
+
+        <app-results-list></app-results-list>
+
         <app-links></app-links>
 
       </div>
 
     </main>
-    
+
   </div>
 
   <footer class="govuk-footer " role="contentinfo">
