--- a/src/app/results-list/results-list.component.css
+++ b/src/app/results-list/results-list.component.css
@@ -1,3 +1,7 @@
+.checkbox-space {
+ margin: 0px 0px 5px 0px;
+}
+
 .blue-border {
-    border-bottom: 8px solid #1d70b8 ;
+  border-bottom: 8px solid #1d70b8 ;
 }
