--- a/src/app/results-list/results-list.component.html
+++ b/src/app/results-list/results-list.component.html
@@ -3,8 +3,8 @@
   <div class="govuk-form-group">
       <div *ngFor="let pupil of pupilData" class="govuk-checkboxes">
           <div class="govuk-checkboxes__item checkbox-space">
-            <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
-            <label class="govuk-label govuk-checkboxes__label" for="waste">
+            <input class="govuk-checkboxes__input" id="" name="" type="checkbox" value="">
+            <label class="govuk-label govuk-checkboxes__label" for="">
                 {{pupil.firstName}} {{pupil.surname}} DOB {{pupil.dob}} ({{pupil.gender}})
             </label>
           </div>
