added results-lisst-detail component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,8 @@
 
         <app-search-parameters></app-search-parameters>
 
-        <app-results-list></app-results-list>
+        <!-- <app-results-list></app-results-list> -->
+        <app-results-list-detail></app-results-list-detail>
 
         <app-links></app-links>
 
